@@ -36,6 +36,7 @@ Version 1.1.7+SVN:
  * AmigaOS4 support (patch #564)
  * user interface
    * disable inactive sliders instead of hiding them
+   * sliders can be adjusted with keyboard left and right
 
 Version 1.1.7:
  * campaigns
